<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/bg"
    tools:context="com.example.milkiminz.raddilo.RegistrationAd"
    tools:ignore="Overdraw">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/registration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView10"
                android:textSize="30sp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/aemail"
                android:layout_marginTop="25dp"
                android:hint="@string/email"
                android:layout_below="@+id/acomname"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:gravity="center_vertical|center_horizontal" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/acomname"
                android:hint="Company"
                android:gravity="center_vertical|center_horizontal"
                android:layout_below="@+id/spname"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/apass"
                android:layout_below="@+id/aemail"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="50dp"
                android:hint="@string/prompt_password"
                android:gravity="center_vertical|center_horizontal" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/spcpass"
                android:layout_marginTop="27dp"
                android:layout_below="@+id/apass"
                android:layout_centerHorizontal="true"
                android:hint="@string/confirmpassword"
                android:gravity="center_vertical|center_horizontal" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:ems="10"
                android:layout_marginTop="31dp"
                android:id="@+id/spph"
                android:hint="@string/phone"
                android:gravity="center_vertical|center_horizontal"
                android:layout_below="@+id/spcpass"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:ems="10"
                android:id="@+id/spadd"
                android:layout_below="@+id/spph"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="24dp"
                android:hint="@string/address"
                android:gravity="center_vertical|center_horizontal" />

            <Button
                android:text="@string/submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/spadd"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="22dp"
                android:id="@+id/spsubmit"
                android:onClick="Check" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/spname"
                android:hint="@string/name"
                android:gravity="center_vertical|center_horizontal"
                android:layout_below="@+id/textView10"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="15dp" />

            <TextView
                android:text="@string/accalready"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/spsubmit"
                android:layout_centerHorizontal="true"

                android:id="@+id/textView4"
                android:textSize="36sp" />

            <Button
                android:text="@string/title_activity_loginshop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textView4"
                android:layout_centerHorizontal="true"
                android:onClick="login"
                android:layout_marginTop="20dp" />
        </RelativeLayout>




    </ScrollView>

</RelativeLayout>
